--- a/sandi_stock_reactjs/src/assets/styles/components/_tables.scss
+++ b/sandi_stock_reactjs/src/assets/styles/components/_tables.scss
@@ -4,7 +4,7 @@
   margin-bottom: 0;
   thead {
     th {
-      border-top: 0;
+      border-top: 1px solid #dee2e6;
       border-bottom-width: 1px;
       font-family: $type1;
       font-weight: 500;
