--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -435,3 +435,24 @@
     }
   }
 }
+
+
+.inside_table th, .inside_table td{
+  font-size: .9rem;
+  padding: 5px 5px;
+}
+.right{
+  text-align: right;
+  width: 100%;
+  margin-top: 10px;
+  padding-right: 10px;
+}
+.small_button{
+  padding: 0.8rem 0.9rem;
+}
+.small_button i{
+  margin-right: 0px;
+}
+.center{
+  text-align: center;
+}
