--- a/sandi_stock_reactjs/src/assets/styles/components/_forms.scss
+++ b/sandi_stock_reactjs/src/assets/styles/components/_forms.scss
@@ -1,7 +1,7 @@
 /* Forms */
 
 .form-group {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0px;
 }
 
 .input-group-append,
@@ -34,6 +34,7 @@
   font-weight: 400;
   padding: 5px 5px;
   border-radius: 5px;
+  height: 2.675rem;
 }
 
 select {
@@ -62,7 +63,7 @@ select {
     font-size: $default-font-size;
     line-height: 1;
     vertical-align: top;
-    margin-bottom: .5rem;
+    margin-bottom: .1rem;
   }
   &.has-danger {
     .form-control {
