--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -260,7 +260,7 @@
       -ms-transition: all $action-transition-duration $action-transition-timing-function;
     }
     .main-panel {
-      width: 100%;
+      width: calc(100% - 70px);
     }
   }
 }
@@ -436,7 +436,13 @@
   }
 }
 
-
+.table th {
+  padding: 5px 5px;
+  text-align: center;
+}
+.table td {
+  padding: 2px 5px;
+}
 .inside_table th, .inside_table td{
   font-size: .9rem;
   padding: 5px 5px;
