--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -496,3 +496,10 @@
 .card .card-title {
   font-size: 17px;
 }
+.selected-row {
+  background: #b4ccf1;
+}
+.validation{
+  color: red;
+  margin-bottom: 10px;
+}
