--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -507,3 +507,8 @@
   color: red;
   margin-bottom: 10px;
 }
+.td_wrapper_300{
+  max-width: 300px;
+  min-width: 300px;
+  white-space: initial !important;
+}
