--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -456,6 +456,10 @@
   padding: 5px 5px;
   cursor: pointer;
 }
+.customers td{
+  padding: 5px 5px;
+  cursor: pointer;
+}
 .right{
   text-align: right;
   width: 100%;
