--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -452,6 +452,10 @@
   padding: 5px 5px;
   cursor: pointer;
 }
+.selectable td{
+  padding: 5px 5px;
+  cursor: pointer;
+}
 .employees td{
   padding: 5px 5px;
   cursor: pointer;
