--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -470,6 +470,9 @@
 }
 .right{
   text-align: right;
+}
+.right_button{
+  text-align: right;  
   width: 100%;
   margin-top: 10px;
   padding-right: 10px;
