--- a/sandi_stock_reactjs/src/assets/styles/components/_cards.scss
+++ b/sandi_stock_reactjs/src/assets/styles/components/_cards.scss
@@ -22,7 +22,7 @@
     font-weight: 500;
     color: $card-title-color;
     margin-bottom: 15px;
-    text-transform: capitalize;
+    //text-transform: capitalize;
     font-family: $type1;
     font-size: 14px;
   }
