--- a/sandi_stock_reactjs/src/assets/styles/_layout.scss
+++ b/sandi_stock_reactjs/src/assets/styles/_layout.scss
@@ -600,3 +600,13 @@
 .hidden{
   display: none;
 }
+
+.form_value{
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 5px 5px;
+  padding-top: 9px;
+  border-radius: 5px;
+  height: 2.675rem;
+}
